Fix spacing

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -29,17 +29,13 @@ body {
   flex-shrink: 0;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
+  margin-bottom: 8px;
 }
 
 .text {
